0.62.7
------
1. Dont draw hover for disabled listviews.
2. Stop animating progressbars when they reach max value.
3. Fix 'bleeding' of Arora's progressbar.

0.62.6
------
1. Increase menubar item height by 1 pixel - seems to align better
   with Gtk2.
2. Improve look of comboboxes in Qt4 printer properties dialog listview.
3. Provide initial support for Bespin's XBar - disabled by default. To enable,
   call cmake with -DQTC_XBAR_SUPPORT=true
4. Draw popup menu title text!
5. Allow ability to specify if titlebar center alignment is for the full window
   width, or just the text area.
6. Fix weird highlighting behaviour in QtWebKit text edit fields.
7. Fix position of toolbar icons in Arora.
8. Fix disabled tabs.

0.62.5
------
1. Use gradient for filled slider - unless appearance is flat/raised.
2. Reduce the amount of size adjustment to menubar items when toolbar
   borders are set.
3. Fix vertical toolbar borders.
4. Slightly alter listview header size.
5. Actually include the KWin titlebar alignment code!!!
6. Adjust tab widget scroll buttons slightly.
7. Fix crash with some pure Qt4 apps.

0.62.4
------
1. When drawing filled slider groove, use fill colour for border as well.
2. Better positioning of V arrows on secondary scrollbar buttons.

0.62.3
------
1. Dont draw focus for combobox listviews.
2. When menubars have a border, adjust the menubar items accordingly.
3. Reduce menubar margins.
4. When filling the used part of a slider groove, use the slider colour 
   if set, otherwise use the highlight colour.

0.62.2
------
1. Adjust KMenu titles.
2. Fixed (hopefully!) clipping of toolbutton text.
3. Fixed some more tab clipping (Qt4.5)
4. Draw KMenuTitle more button like - is more consistent with KDE3.

0.62.1
------
1. Use highlight colour for unselected focused view items.
2. Fix saving/reading of custom shades.
3. Reduce tab width by 4 pixels.
4. Fix clipping of toolbar text.
5. Fix group box check box clipping.

0.62.0
------